# zero2prod

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
migrations/: 20210324193527_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
